# HE_Privacy_Module

./: README.md
homomorphic_enc_microservice/: CMakeLists.txt  Dockerfile
homomorphic_enc_microservice/src/: main.cpp
